# BMSTU-VKR

docs/: analysis.tex  conclusion.tex  design.tex  intro.tex  lib.tex  referat.tex  report.tex  research.tex  settings.tex  techno.tex
src/: CMakeLists.txt  Delft.cpp  Delft.h  DistributionsCFG.h  PetriNet.cpp  PetriNet.h  PetriNetBuilder.cpp  PetriNetBuilder.h  PetriNetConstructor.cpp  PetriNetConstructor.h  PetriNetDrawer.cpp  PetriNetDrawer.h  Stats.h  anim.ui  animation.cpp  animation.h  group.cpp  group.h  group.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.gps  reception.cpp  reception.h  reception.ui  result.cpp  result.h  result.ui  windows.cpp  windows.h  windows.ui
src/anim_elements/: ArrowAnimItem.cpp  ArrowAnimItem.h  BaseAnimItem.h  Colors.h  EnterAnimItem.cpp  EnterAnimItem.h  QSizeAnimItem.cpp  QSizeAnimItem.h  QueueAnimItem.cpp  QueueAnimItem.h  ReceptionAnimItem.cpp  ReceptionAnimItem.h  TransactAnimItem.cpp  TransactAnimItem.h  WindowsGroupAnimItem.cpp  WindowsGroupAnimItem.h  WorkerAnimItem.cpp  WorkerAnimItem.h
src/data/: res.csv  res10.csv  res2.csv  res6.csv  time01.csv  time05.csv  time1.csv  time_cmp.csv
src/petri_net/: CMakeLists.txt  Delft.cpp  Delft.h  Distributions.h  Error.h  PetriNet.cpp  PetriNet.h  PetriNetBuilder.cpp  PetriNetBuilder.h  PetriNetDrawer.cpp  Stats.cpp  Stats.h  main.cpp
